--- a/docs/css/main.less
+++ b/docs/css/main.less
@@ -75,13 +75,14 @@ GENERAL
 html, body {
   background: @tokenika_dark;
   height: 100vh;
+  overflow-x: hidden;
+
 }
 
 body {
   .body_font;
     color: @tokenika_light;
     background: @tokenika_dark;
-    overflow-x: hidden;
     // opacity: 0;
     // display: none;
 }
@@ -133,6 +134,7 @@ a {
 }
 
 .free-float-block {
+  clear: both;
 
 
   strong {
@@ -144,6 +146,7 @@ a {
 a.floating-link {
   color: @tokenika_light;
   font-weight: 300;
+  text-transform: uppercase;
 }
 
 main {
@@ -154,6 +157,7 @@ main {
   // transform: translate(-50%, -50%);
   // padding-bottom: 140px;
   // display: none;
+  margin-top: 50px;
 }
 
 
@@ -229,6 +233,8 @@ FOOTER
 
 footer {
 
+      margin-top: 80px;
+
   .inner-footer {
       border-top: 1px solid @tokenika_light;
       padding-top: 35px;
@@ -250,7 +256,7 @@ footer {
 RWD
 ******************************************************************************/
 
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 1440px) {
   main {
     position: absolute;
     top: 50%;
@@ -258,12 +264,15 @@ RWD
     margin-right: -50%;
     transform: translate(-50%, -50%);
     padding-bottom: 140px;
+    margin-top: 0;
   }
 
   footer {
     position: absolute;
     width: 100%;
     bottom: 0;
+    left: 0;
+    margin-top: 0;
   }
 
   .free-float-block {
@@ -295,9 +304,13 @@ RWD
     }
   }
 
-  footer p {
+  footer  {
+  margin-top: 10px;
+  p {
     text-align: center !important;
   }
+
+}
 }
 
 @media screen and (max-width: 480px) {
@@ -321,11 +334,11 @@ PRELOADER
   z-index: 100;
 
   .inner-preloader {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
+    // position: absolute;
+    // top: 50%;
+    // left: 50%;
+    // margin-right: -50%;
+    // transform: translate(-50%, -50%);
 
     span {
       color: @tokenika_light;
