--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -2,7 +2,7 @@ body {
   background-color: white;
   margin-left: 100px;
   /* margin-left: 7rem; */
-  font-size: 100%;
+  font-size: 95%;
   }
 
 h1 {
@@ -14,6 +14,10 @@ pre {
 code {
   background-color: white;
   color: black
+}
+
+div.sphinxsidebar {
+  font-size: 90%;
 }
 
 @media (min-width:600px){.container{width:600px}}
